tests/NormalTests/paczka1/small_fuzzy/68917821.err
Error in line 1: jbl90n S971 24,4
Error in line 5: jbl90n A159 82,5
Error in line 6: S971 A414 63,3
Error in line 7: jbl90n S971 48,9
